# molecule-lxd

./: .editorconfig  .gitignore  .yamllint  CHANGELOG.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  setup.cfg  tox.ini
.github/workflows/: tox.yml
docs/: development.md  examples.md  index.md  platform-options.md  quickstart.md  requirements.md
src/molecule_lxd/: driver.py
src/molecule_lxd/playbooks/: create.yml  destroy.yml  prepare.yml
src/molecule_lxd/test/: test_func.py
src/molecule_lxd/test/scenarios/molecule/basic-packages/: molecule.yml
src/molecule_lxd/test/scenarios/molecule/default/: converge.yml  molecule.yml
src/molecule_lxd/test/scenarios/molecule/virtual-machine/: molecule.yml
