[metadata]
name = molecule-lxd
url = https://github.com/nextlayer-ansible/molecule-lxd
project_urls =
    Bug Tracker = https://github.com/nextlayer-ansible/molecule-lxd/issues
    CI = https://github.com/nextlayer-ansible/molecule-lxd/actions
    Source Code = https://github.com/nextlayer-ansible/molecule-lxd
description = LCD Molecule Plugin :: run molecule tests on LXD
long_description = file: README.md
long_description_content_type = text/markdown
author = DeliBooth GmbH
author_email = info@delibooth.com
maintainer = DeliBooth GmbH
maintainer_email = info@delibooth.com
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Framework :: Pytest
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

    Topic :: System :: Systems Administration
    Topic :: Utilities

keywords =
    ansible
    roles
    testing
    molecule
    plugin
    lxd

[options]
use_scm_version = True
python_requires = >=3.8
packages = find:
package_dir =
  = src
include_package_data = True
zip_safe = False

# These are required in actual runtime:
install_requires =
    molecule >= 4.0.4
    pyyaml >= 5.1

[options.extras_require]
test =
    molecule[test]

[options.entry_points]
molecule.driver =
    lxd = molecule_lxd.driver:LXD

[options.packages.find]
where = src
